remove top border of the sendText <div> to avoid overlapping of borders

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
     margin-top: 0;
     position: relative;
     border: 1px solid black;
+    border-top: 0;
     height: 4rem;
     background-color: #fdf7ad;
 }
